--- a/zh-CN/documentation/ch01.md
+++ b/zh-CN/documentation/ch01.md
@@ -52,17 +52,17 @@ SMOKE（或任何排放处理器）的目的是将排放清单数据的分辨率
 
 - **运行SMOKE测试案例：**[第4.3节，运行SMOKE测试案例](ch04.md#4.3)提供了与SMOKE一同发布的有关测试案例运行的说明。
 
-- **设置新的清单、网格、情景等并运行SMOKE：**[第4.4节，如何使用SMOKE](ch04.md#4.4)中说明了用户应如何针对自己的情况设置SMOKE。CMAS中心的[SMOKE课堂培训]( http://www.cmascenter.org/training.cfm )涵盖了这些主题的详细内容。
+- **设置新的清单、网格、情景等并运行SMOKE：**[第4.4节，如何使用SMOKE](ch04.md#4.4)中说明了用户应如何针对自己的情况设置SMOKE。CMAS中心的[SMOKE课堂培训]( https://www.cmascenter.org/training/classes.cfm )涵盖了这些主题的详细内容。
 
-- **准备输入文件：** 大多数SMOKE输入文件都是ASCII文件，可以使用数据库程序或其他工具来准备。有关所有输入文件格式的说明，请参见[第8章，SMOKE输入文件](ch08.md)。用户可以从EPA网站，例如[清单和排放因子信息交换所（CHIEF）]( http://www.epa.gov/ttn/chief/ )获得数据输入文件（可能不是SMOKE输入格式）。
+- **准备输入文件：** 大多数SMOKE输入文件都是ASCII文件，可以使用数据库程序或其他工具来准备。有关所有输入文件格式的说明，请参见[第8章，SMOKE输入文件](ch08.md)。用户可以从EPA网站，例如[清单和排放因子信息交换所（CHIEF）]( https://www.epa.gov/chief )获得数据输入文件（可能不是SMOKE输入格式）。
 
 - **如何设置运行脚本：** 在[第4章，如何使用SMOKE](ch04.md)中，我们介绍了SMOKE脚本以及如何使用它们。设置是通过环境变量分配的，在[第2.2节，分配文件和环境变量](ch02.md#2.2)中对环境变量进行了概述。[第4.2.4节，脚本设置](ch04.md#4.4)中描述了用于控制脚本（而不是程序）的任何设置。在[第5章，SMOKE实用工具](ch05.md)、[第6章，SMOKE核心程序](ch06.md)和[第7章，SMOKE质量控制](ch07.md)中进一步说明了由SMOKE程序评估并直接影响其行为的设置。
 
 - **检查SMOKE是否正常运行：**[第7.5节，质量控制方法](ch07.md#7.5)中包含了有关如何验证SMOKE已正常运行的步骤列表。本章还包括有关运行SMOKE的质量控制（quality assurance，QA）功能的说明，以及配置不同类型的质量控制报告文件（[第7.3节，REPCONFIG输入文件](ch07.md#7.3)）。
 
-- **了解SMOKE正在执行的操作：**[第5章，SMOKE实用工具](ch05.md)、[第6章，SMOKE核心程序](ch06.md)和[第7章，SMOKE质量控制](ch07.md)为每个SMOKE程序提供了有关SMOKE操作的任何可用技术文档。我们一直在努力完善此文档，并可以通过[CMAS中心服务台]( http://www.cmascenter.org/html/help.html )获得建议。
+- **了解SMOKE正在执行的操作：**[第5章，SMOKE实用工具](ch05.md)、[第6章，SMOKE核心程序](ch06.md)和[第7章，SMOKE质量控制](ch07.md)为每个SMOKE程序提供了有关SMOKE操作的任何可用技术文档。我们一直在努力完善此文档，并可以通过[CMAS中心服务台]( https://www.cmascenter.org/help-desk.cfm )获得建议。
 
-- **提交有关SMOKE的问题报告或疑问：** 有关SMOKE和其他Models-3组件的所有问题均应通过[CMAS中心服务台]( http://www.cmascenter.org/html/help.html )提交。
+- **提交有关SMOKE的问题报告或疑问：** 有关SMOKE和其他Models-3组件的所有问题均应通过[CMAS中心服务台]( https://www.cmascenter.org/help-desk.cfm )提交。
 
 尽管[第11章，源代码和Include文件](ch11.md)中提供了一些信息，但本手册并未提供有关代码本身的大量技术文档。该代码具有广泛的内联文档，以帮助精通Fortran的用户了解其工作原理。我们希望将来我们能够增强[第11章，源代码和Include文件](ch11.md)中的文档，但不确定是否必要，迄今为止也尚未获得此类文档的资源。
 
