--- a/zh-CN/documentation/ch10.md
+++ b/zh-CN/documentation/ch10.md
@@ -1,542 +1,410 @@
-# 10 SMOKE Output Files
+#10 SMOKE输出文件
 
-## 10.1 Introduction
+## 10.1 简介
 
-An output file is a file that is output from a SMOKE program and not
-used as input to any other SMOKE programs. This include the model-ready
-emissions files and various reports. Files that are used as input to
-other SMOKE programs are considered intermediate files and are
-documented in [Chapter 9, *SMOKE Intermediate
-Files*](ch09.html "Chapter 9. SMOKE Intermediate Files").
+输出文件是从SMOKE程序输出的文件，不用作任何其他SMOKE程序的输入。输出文件包括了可用于预测模型的排放文件和各种报告。用作其他SMOKE程序输入的文件被视为中间文件，并记录在[第9章，SMOKE中间文件](ch09.md)中。
 
-In this chapter, the output files are organized under headings named for
-the SMOKE programs that create the files; the files are listed
-alphabetically within each program section. The order of the programs
-within the chapter is also alphabetical. Please note that some file
-types have multiple file names, one per source category. For example,
-the multiplicative control report file name is `ACREP`,
-`MCREP`, or `PCREP`, depending on whether the area,
-mobile, or point source category is being processed by **Cntlmat**. In
-these cases of multiple names for a single file type, the file
-description is listed one time for all output files.
+在本章中，先按照SMOKE程序名称的字母顺序排序，然后列出该程序生成的输出文件，同样按字母顺序排列。请注意，某些文件类型具有多个文件名，每个源类别一个。例如，乘法控制报告文件名是`ACREP`、`MCREP`或`PCREP`，这取决于由**Cntlmat** 处理的是区域源、移动源还是点源。在单个文件类型具有多个名称的情况下，所有输出文件的描述在本章中都会被列出。
 
 ## 10.2 Cntlmat
 
-The **Cntlmat** program is responsible for creating the growth and
-control matrices. **Cntlmat** creates the following output files:
+**Cntlmat** 程序负责创建生长和控制矩阵。**Cntlmat** 会创建以下输出文件：
 
--   Multiplicative control report: [Section 10.2.1, "`ACREP`,
-    `MCREP`, and
-    `PCREP`"](ch10s02.html#sect_output_ampcrep "10.2.1. ACREP, MCREP, and PCREP")
+- 乘法控制报告（Multiplicative control report），详见[第10.2.1节，ACREP、MCREP和PCREP](ch10#10.2.1)
 
--   Growth factors report: [Section 10.2.2, "`APROJREP`,
-    `MPROJREP`, and
-    `PPROJREP`"](ch10s02s02.html "10.2.2. APROJREP, MPROJREP, and PPROJREP")
+- 增长因素报告（Growth factors report），详见：[第10.2.2节，APROJREP、MPROJREP和PPROJREP](ch10#10.2.2)
 
--   Reactivity controls report: [Section 10.2.3, "`AREACREP`,
-    `MREACREP`, and
-    `PREACREP`"](ch10s02s03.html "10.2.3. AREACREP, MREACREP, and PREACREP")
+- 反应性控制报告（Reactivity controls report），详见[第10.2.3节，AREACREP、MREACREP和PREACREP](ch10#10.2.3)
 
--   Summary of controls report: [Section 10.2.4, "`ACSUMREP`,
-    `MCSUMREP`, and
-    `PCSUMREP`"](ch10s02s04.html "10.2.4. ACSUMREP, MCSUMREP, and PCSUMREP")
+- 控制摘要报告（Summary of controls report），详见[第10.2.4节，ACSUMREP、MCSUMREP和PCSUMREP](ch10#10.2.4)
 
-### 10.2.1. `ACREP`, `MCREP`, and `PCREP`
+### 10.2.1 ACREP、MCREP和PCREP
 
-Type: ASCII - list-directed
+类型：ASCII-列表文件-directed
 
-Summary: This file contains the report for the multiplicative control
-matrix. It includes the inventory pollutant emissions before and after
-application of the multiplicative control matrix factors. For area and
-mobile sources, the report resolution is by state and SCC code. For
-point sources, the report is by state/county and plant code. The
-individual factors applied (e.g., /ALLOWABLE/ and /CONTROL/ packet
-factors) by source are provided in the `*CSUMREP` file described
-in [Section 10.2.4, "`ACSUMREP`, `MCSUMREP`, and
-`PCSUMREP`"](ch10s02s04.html "10.2.4. ACSUMREP, MCSUMREP, and PCSUMREP").
+摘要：此文件包含乘法控制矩阵的报告。它包括在应用乘法控制矩阵因子之前和之后的污染物排放清单。对于区域源和移动源，报告按州和SCC代码来分类解析。对于点源，报告按州/县和工厂代码分类。在[第10.2.4节，ACSUMREP、MCSUMREP和PCSUMREP](ch10#10.2.4)中描述的*CSUMREP文件中提供了按源应用的各个因子（例如，/ALLOWABLE/和/CONTROL/包因子）。 
 
-The file header and output format are similar to what is output by the
-**Smkreport** program (see [Section 7.4, "Reports Created by
-**Smkreport**"](ch07s04.html "7.4. Reports Created by Smkreport"). The
-headers include information about:
+文件头和输出格式与**Smkreport**程序输出的格式相似（请参见[第7.4节，由Smkreport创建的报告](ch07md.#7.4)。文件头包含以下有关信息：
 
+- 报告的源类别（区域源、移动源或点源）
 
--   The source category (area, mobile, or point sources) for the report
+- 清单输入文件的基准年或预测年
 
--   The base year or projected year of the inventory input file
+- 应用了哪些控制包
 
--   Which control packets were applied
+- 报告中的排放是基于臭氧季节还是年度总排放量
 
--   Whether the emissions in the report are based on ozone-season or
-    annual total emissions
+- 包控制的清单污染物
 
--   The inventory pollutants controlled by the packets
+- 单位
 
--   The units
+该报告的列包括：
 
+- 州ID（区域源和移动源）；州/县ID（点源）
 
-The columns of the report include:
+- SCC（区域源和移动源）；工厂（点源）
 
+- 每种受控污染物的输入排放量（吨/天）
 
--   State ID (area and mobile); state/county ID (point)
+- 每种受控污染物的输出排放量（吨/天）
 
--   SCC (area and mobile); plant (point)
+### 10.2.2 APROJREP、MPROJREP和PPROJREP
 
--   Input emissions in tons/day for each controlled pollutant
+类型：ASCII-列表文件-directed
 
--   Output emissions in tons/day for each controlled pollutant
+摘要：此文件包含在**Cntlmat**运行期间应用的/PROJECTION/包的报告。它包括适用于污染物排放清单的增长矩阵因子。对于所有污染源，报告的分辨率都是源一级。对于区域源和移动源，这意味着报告解析是按县代码和SCC进行的。如果链路包含在清单中，则移动源可能还具有链路的详细信息。对于点源，解析包括州/县代码、工厂ID、SCC以及其他源标识符，例如分段和点。
 
+文件头和输出格式与**Smkreport**程序输出的格式相似（请参见[第7.4节，由Smkreport创建的报告](ch07md.#7.4)，但比*CREP文件少（请参见[第10.2.1节，ACREP、MCREP和PCREP](ch10#10.2.1)）。文件头包含以下有关信息：
 
+- 报告的源类别（区域源、移动源或点源）
 
-### 10.2.2. `APROJREP`, `MPROJREP`, and `PPROJREP`
+- 清单的基准年
 
+- 应用包的增长年份
 
-Type: ASCII - list-directed
+- 所有污染物统一接受因子的事实
 
-Summary: This file contains the report for the /PROJECTION/ packet
-applied during the **Cntlmat** run. It includes the growth matrix
-factors applied to the inventory pollutant emissions. For all sources,
-the resolution of the report is the source level. For area and mobile
-sources, this means that the report resolution is by county code and
-SCC. Mobile sources may additionally have link-detail information if
-links are included in the inventory. For point sources, the resolution
-includes the state/county code, plant ID, SCC, and other source
-identifiers such as segment and point.
+该报告的列包括：
 
-The file header and output format are somewhat similar to that output by
-the **Smkreport** program (see [Section 7.4, "Reports Created by
-**Smkreport**"](ch07s04.html "7.4. Reports Created by Smkreport")), but
-less so than the `*CREP` file (see [Section 10.2.1,
-"`ACREP`, `MCREP`, and
-`PCREP`"](ch10s02.html#sect_output_ampcrep "10.2.1. ACREP, MCREP, and PCREP")).
-The headers include information about:
+- 州ID（区域源和移动源）；州/县ID（点源）
 
+- SCC（区域源和移动源）；工厂（点源）
 
--   The source category (area, mobile, or point sources) for the report
+- 增长因子
 
--   The base year of the inventory
+### 10.2.3。 `AREACREP`，`MREACREP`和`PREACREP`
 
--   The growth year for the packets being applied
+类型：ASCII-列表导向
 
--   The fact that all pollutants receive factors uniformly.
+摘要：此文件包含在** Cntlmat **运行期间应用的反应性数据包的报告。它包含适用于清单中任何获得反应性控制的来源的反应性数据包内容。对于所有来源，如第10.2.2节“ APROJREP，MPROJREP和PPROJREP”中的[A | M | P] PROJREP文件所述，报告的分辨率就是源级别。 ]（ch10s02s02.html“ 10.2.2。APROJREP，MPROJREP和PPROJREP”）。
 
+文件头和输出格式与** Smkreport **程序输出的格式相同（请参见[第7.4节，“由** Smkreport **创建的报告”]（ch07s04.html“ 7.4。由Smkreport创建的报告”） ）。标头中包含以下信息：
 
-The columns of the report include:
 
+-报告的来源类别（区域，移动或点源）
 
--   State ID (area and mobile); state/county ID (point)
+-库存的基准年（或预计的年份，如果适用）
 
--   SCC (area and mobile); plant (point)
+-反应性数据包中的预计年份
 
--   Growth factor
+-应用了反应性控制的污染物名称（例如ROG）。
 
-### 10.2.3. `AREACREP`, `MREACREP`, and `PREACREP`
+-报告中的排放量是基于平均日排放量还是年度总排放量。
 
-Type: ASCII - list-directed
+-列名和单位
 
-Summary: This file contains the report for the reactivity packet applied
-during the **Cntlmat** run. It contains the reactivity packet contents
-applied for any source in the inventory that gets a reactivity control.
-For all sources, the resolution of the report is the source level, as
-described for the `[A|M|P]PROJREP` files in [Section 10.2.2,
-"`APROJREP`, `MPROJREP`, and
-`PPROJREP`"](ch10s02s02.html "10.2.2. APROJREP, MPROJREP, and PPROJREP").
 
-The file header and output format are the same as that output by the
-**Smkreport** program (see [Section 7.4, "Reports Created by
-**Smkreport**"](ch07s04.html "7.4. Reports Created by Smkreport")). The
-headers in include information about:
+报告中的列包括：
 
 
--   The source category (area, mobile, or point sources) for the report
+-烟源号码
 
--   The base year of the inventory (or the projected year if applicable)
+-州/县代码
 
--   The projected year in the reactivity packet
+-基准年SCC
 
--   The pollutant name (e.g., ROG) for which the reactivity controls
-    were applied.
+-基年排放
 
--   Whether the emissions in the report are based on average-day or
-    annual total emissions.
+-新的基准年排放量
 
--   The column names and units
+-投影系数
 
+-预计年份SCC
 
-The columns in the report include:
+-预计年份的物种概况
 
+-市场渗透率
 
--   SMOKE source number
+### 10.2.4。 ACSUMREP，MCSUMREP和PCSUMREP
 
--   State/county code
+类型：ASCII-列表导向
 
--   Base-year SCC
+摘要：此文件包含按源应用于每个源的所有控制（非增长）信息。该文件的结构不适合导入电子表格，因为应用于每个源的所有控制信息都列在每个源的下方（不在同一行上）。该文件中没有标题。
 
--   Base-year emissions
+## 10.3。 **海拔点**
 
--   New base-year emissions
+** Elevpoint **程序负责选择提升的信号源。 ** Elevpoint **创建以下输出文件：
 
--   Projection factor
 
--   Projected-year SCC
+-高点来源报告：[第10.3.1节，“`REPPELV`”]（ch10s03.html＃sect_output_reppelv“10.3.1.。REPPELV”）
 
--   Projected-year speciation profile
+-堆栈组文件：[Section 10.3.2，“`STACK_GROUPS`”]（ch10s03s02.html“ 10.3.2。STACK_GROUPS”）
 
--   Market penetration rate
 
-### 10.2.4. `ACSUMREP`, `MCSUMREP`, and `PCSUMREP`
+### 10.3.1。 `REPPELV`
 
-Type: ASCII - list-directed
+类型：ASCII-列表导向
 
-Summary: This file contains all of the control (not growth) information
-applied to each source, by source. The structure of this file is not
-amenable for import into a spreadsheet, because all control information
-applied to each source is listed underneath each source (not on the same
-line). There is no header in this file.
+摘要：此ASCII输出文件包含用于在SMOKE中选择高架和PinG源的源和标准。以下是报告中列/标题的描述：
 
-## 10.3. **Elevpoint**
 
-The **Elevpoint** program is responsible for selecting the elevated
-sources. **Elevpoint** creates the following output files:
+-源ID：SMOKE源ID，仅由SMOKE使用
 
+-地区：国家/州/县代码（CSSYYY，其中C =国家/地区，SS =州，而YYY =县）
 
--   Elevated-point-source report: [Section 10.3.1,
-    "`REPPELV`"](ch10s03.html#sect_output_reppelv "10.3.1. REPPELV")
+-工厂：工厂ID（FF10），工厂ID（ORL）
 
--   Stack groups file: [Section 10.3.2,
-    "`STACK_GROUPS`"](ch10s03s02.html "10.3.2. STACK_GROUPS")
+-字符1：Unity ID（FF10），Point ID（ORL）
 
+-字符2：发布点ID（FF10），堆栈ID（ORL）
 
-### 10.3.1. `REPPELV`
+-字符3：进程ID（FF10），段ID（ORL）
 
-Type: ASCII - list-directed
+-字符4：对于IDA广告资源，SCC
 
-Summary: This ASCII output file contains the sources and criteria used
-for selecting elevated and PinG sources in SMOKE. The following is a
-description of columns/header in the report:
+-名称：输入清单中的工厂描述
 
+-升降机：提升状态-P =网格羽，E =提升
 
--   Source ID: SMOKE source ID, used by SMOKE only
+-组：由SMOKE分配的堆栈组号
 
--   Region: Country/state/county code (CSSYYY where C=country, SS=state,
-    and YYY=county)
+-Stk Ht：烟囱高度（以米为单位）
 
--   Plant: Facility ID (FF10), Plant ID (ORL)
+-Stk Dm：烟囱直径，以米为单位
 
--   Char 1: Unity ID (FF10), Point ID (ORL)
+-Stk Tmp：烟囱出口气体温度，单位为K
 
--   Char 2: Release Point ID (FF10), Stack ID (ORL)
+-Stk Vel：烟囱出口气体速度，m / s
 
--   Char 3: Process ID (FF10), Segment ID (ORL)
+-Stk Flw：烟囱出口气体流速，m ^ 3 ^ / s
 
--   Char 4: For IDA inventory, SCC
+-上升：Briggs分析溶液的羽流以米为单位上升。仅当在“ PELVCONFIG”输入文件中将RISE指定为选择标准时，才输出此列。
 
--   Plt Name: Plant description from the input inventory
+-组\ <pol \>：“ PELVCONFIG”文件中每种污染物（\ <pol \>）的源或源组的每日最大排放量。当单个排放源拥有自己的组号时，这些排放就是排放源。仅当在“ PELVCONFIG”输入文件中将污染物指定为选择标准时，才输出此列。
 
--   Elevstat: Elevated status - P = plume-in-grid, E = elevated
+-Var 1：来自“ PELVCONFIG”输入文件的第一个变量，用于将源建立为PinG /高架源
 
--   Group: SMOKE-assigned stack group number
+-类型1：如果在“ PELVCONFIG”输入文件中使用了“ [TOP] {。quote}”，则该字段显示为“ [RANK] {。quote}”
 
--   Stk Ht: Stack height in meters
+-测试1：用于将该源确定为PinG /高架源的测试（例如\>，\ <，\> =，=）
 
--   Stk Dm: Stack diameter in meters
+-Val 1：如果使用TOP，则此值为RANK。否则，此值是与Var 1和Test 1一起使用的标准（例如，如果Var 1为HT，Test 1为“ [\>] {。quote}”，并且如果Val 1为50，则选择标准为堆栈高度大于50。
 
--   Stk Tmp: Stack exit gas temperature in K
 
--   Stk Vel: Stack exit gas velocity in m/s
+Var 2到Val 2与Var 1到Val 1相同，除了仅当对于SMOKE用于将源建立为PinG或升高的OR条件的AND条件存在时，才定义它们。这些类型的变量将与** PELVCONFIG **文件中的AND条件一样多。
 
--   Stk Flw: Stack exit gas flow rate in m^3^/s
+### 10.3.2。 STACK_GROUPS
 
--   Rise: Briggs analytical solution plume rise in meters. This column
-    is output only when RISE is specified as a selection criterion in
-    the `PELVCONFIG` input file.
+类型：I / O API NetCDF-调整后的网格格式
 
--   Group \<pol\>: Daily maximum emissions for source or source group
-    for each pollutant (\<pol\>) in the `PELVCONFIG` file. These
-    emissions are source emissions when a single source has its own
-    group number. This column is output only when a pollutant is
-    specified as a selection criterion in the `PELVCONFIG` input
-    file.
+摘要：CMAQ的I / O API中间文件和输出文件。有关更多信息，请参见[9.3.2节，“ STACK_GROUPS`”]（ch09s03s02.html“ 9.3.2。STACK_GROUPS”）。
 
--   Var 1: The first variable from the `PELVCONFIG` input file
-    that was used in establishing the source as a PinG/elevated source
+## 10.4。 ** Mrggrid **
 
--   Type 1: If "[TOP]{.quote}" was used in the `PELVCONFIG`
-    input file, this field says "[RANK]{.quote}"
 
--   Test 1: The test used to establish this source as a PinG/elevated
-    source (e.g., \>, \<, \>=, =)
+** Mrggrid **程序负责创建模型就绪的排放文件。 ** Mrggrid **创建以下输出文件：
 
--   Val 1: If TOP was used, this value is the RANK. Otherwise, this
-    value is the criterion used with Var 1 and Test 1 (e.g., if Var 1 is
-    HT, Test 1 is "[\>]{.quote}", and if Val 1 is 50, then the criterion
-    for selection is that the stack height be greater than 50.
 
+-可用于模型的排放文件：[第10.4.1节，“`OUTFILE`”]（ch10s04.html＃sect_output_outfile“ 10.4.1..OUTFILE”）
 
-Var 2 through Val 2 are the same as Var 1 through Val 1, except these
-are defined only if an AND condition existed for the OR condition that
-SMOKE used to establish the source as PinG or elevated. There will be as
-many variables of these types as there are AND conditions in the
-**PELVCONFIG** file.
 
-### 10.3.2. `STACK_GROUPS`
+### 10.4.1。 `OUTFILE`
 
-Type: I/O API NetCDF - adapted gridded format
+类型：I / O API NetCDF-调整后的网格格式
 
-Summary: I/O API intermediate file and output file for CMAQ. See
-[Section 9.3.2,
-"`STACK_GROUPS`"](ch09s03s02.html "9.3.2. STACK_GROUPS") for
-more information.
+摘要：从两个或多个源类别创建的最终的，可用于模型的文件。有关文件格式，请参见[10.6节，“ ** Smkmerge **”]（ch10s06.html“ 10.6.Smkmerge”）。
 
-## 10.4. **Mrggrid**
+## 10.5。 ** Smkinven **
 
+** Smkinven **程序负责将原始库存导入SMOKE格式。 ** Smkinven **创建以下输出文件：
 
-The **Mrggrid** program is responsible for creating model-ready
-emissions files. **Mrggrid** creates the following output file:
 
+-库存导入报告：[第10.5.1节，“`REPINVEN”“]（ch10s05.html＃sect_output_repinven”10.5.1.。REPINVEN“）
 
--   Model-ready emissions file: [Section 10.4.1,
-    "`OUTFILE`"](ch10s04.html#sect_output_outfile "10.4.1. OUTFILE")
+-SCC文件：[第10.5.2节“ ASCC，MSCC和PSCC”]（ch10s05s02.html“ 10.5.2.ASCC，MSC，PSCC”）
 
 
-### 10.4.1. `OUTFILE` 
 
-Type: I/O API NetCDF - adapted gridded format
+### 10.5.1。 `REPINVEN`
 
-Summary: Final, model-ready file created from two or more souce
-categories. See [Section 10.6,
-"**Smkmerge**"](ch10s06.html "10.6. Smkmerge") for file format.
+类型：ASCII-列表导向
 
-## 10.5. **Smkinven**
+摘要：此报告由几个不同的部分组成，描述了库存导入的不同部分。
 
-The **Smkinven** program is responsible for importing the raw inventory
-into SMOKE format. **Smkinven** creates the following output files:
+1.本节按CAS号列出了吨/年的排放量；库存记录的数量；是否保留了与该化学文摘社编号相关的全部，部分或全部污染物；和CAS号说明。
 
+    报告中的列包括：
 
--   Inventory import report: [Section 10.5.1,
-    "`REPINVEN`"](ch10s05.html#sect_output_repinven "10.5.1. REPINVEN")
+    -CAS号
 
--   SCC file: [Section 10.5.2, "`ASCC`, `MSCC`,
-    `PSCC`"](ch10s05s02.html "10.5.2. ASCC, MSCC, PSCC")
+    -是否保留所有，全部或部分污染物
 
+    -读取的CAS编号的库存记录数
 
+    -CAS号排放
 
-### 10.5.1. `REPINVEN`
+    -CAS号说明
+    
 
-Type: ASCII - list-directed
+2.本节包括应用“ INVTABLE”中的分解因子之前和之后的排放。此报告仅包括“ INVTABLE”中的Keep = Y的污染物。仅当发生分类和/或聚合时才提供此报告。
 
-Summary: This report is made up of several different sections describing
-different parts of the inventory import.
+    报告中的列包括：
 
- {.orderedlist}
-1.  This section lists, by CAS number, the emissions in tons/year; the
-    number of inventory records; whether all, some, or none of the
-    pollutants associated with that CAS number were kept; and the CAS
-    number description.
+    
+    -“ [保留] {。quote}”唯一的CAS号
 
-    The columns in the report include:
+    -CAS号的排放总量
 
-    
-    -   CAS number
+    -用于调整CAS号以适应污染物的因子
 
-    -   Whether all, some, or none of the pollutants were kept
+    -污染物名称
 
-    -   Number of inventory records read for the CAS number
+    -库存污染物的排放总量
 
-    -   Emissions for the CAS number
+    -污染物描述
 
-    -   CAS number description
-    
-
-2.  This section includes emissions before and after application of
-    disaggregation factors from the `INVTABLE`. Only the
-    pollutants that have Keep = Y in `INVTABLE` will be included
-    in this report. This report will be provided only if disaggregation
-    and/or aggregation have occurred.
-
-    The columns in the report include:
-
-    
-    -   "[Kept]{.quote}" unique CAS number
-
-    -   Emissions total for the CAS number
-
-    -   Factor used to adjust the CAS number to the pollutant
-
-    -   Pollutant name
-
-    -   Emissions total of the inventory pollutant
-
-    -   Pollutant description
-
-    -   CAS number description
+    -CAS号说明
     
 
 
-The following sections are only for area-to-point assignments:
+以下各节仅适用于区域到点分配：
 
- {.orderedlist}
-3.  This section lists SCCs that have area-to-point source factor file
-    assignments but are not in the inventory.
 
-    The columns in the report include:
+3.本节列出了具有区域到点源因子文件分配但不在清单中的SCC。
 
-    
-    -   Assigned SCC codes not in the inventory
-    
+    报告中的列包括：
 
-4.  For emissions going to point sources, this section lists the
-    pollutant name, emissions total before and after the factors are
-    applied, and the total number of FIPS codes affected, by SCC.
+    
+    -分配的SCC代码不在库存中
+    
 
-    The columns in the report include:
+4.对于要指向点源的排放，本节列出了污染物名称，应用因子前后的排放总量以及受SCC影响的FIPS代码总数。
 
-    
-    -   SCC code
+    报告中的列包括：
 
-    -   Pollutant name
+    
+    -SCC代码
 
-    -   Number of FIPS codes affected
+    -污染物名称
 
-    -   Emissions before factors are applied
+    -受影响的FIPS代码数
 
-    -   Emissions after factors are applied
+    -在应用因素之前的排放
 
-    -   SCC description
-    
+    -应用因素后的排放
 
-5.  Same as the above section, except emissions are reported by state.
+    -SCC说明
+    
 
-    The columns in the report include:
+5.除上述排放按州报告外，与上述部分相同。
 
-    
-    -   State
+    报告中的列包括：
 
-    -   SCC code
+    
+    -状态
 
-    -   Pollutant name
+    -SCC代码
 
-    -   Number of FIPS codes affected
+    -污染物名称
 
-    -   Emissions before factors are applied
+    -受影响的FIPS代码数
 
-    -   Emissions after factors are applied
+    -在应用因素之前的排放
 
-    -   SCC description
-    
+    -应用因素后的排放
 
-6.  This section lists, by SCC, the number of state and county FIPS
-    codes getting assigned to point locations and the number not getting
-    assigned.
+    -SCC说明
+    
 
-    The columns in the report include:
+6.本节按SCC列出了分配给点位置的州和县FIPS代码的数量以及未分配的数量。
 
-    
-    -   SCC code
+    报告中的列包括：
 
-    -   Number of FIPS assigned to point locations
+    
+    -SCC代码
 
-    -   Number of FIPS not assigned to point locations
+    -分配给点位置的FIPS数量
 
-    -   SCC description
-    
-### 10.5.2. `ASCC`, `MSCC`, `PSCC`
+    -未分配给点位置的FIPS数量
 
-Type: ASCII - list-directed
+    -SCC说明
+    
+### 10.5.2。 ASCC，MSCC，PSCC
 
-Summary: This file simply lists the SCC codes in the raw inventory.
+类型：ASCII-列表导向
 
-## 10.6. **Smkmerge**
+摘要：此文件仅列出原始库存中的SCC代码。
 
-The **Smkmerge** program is responsible for creating model-ready
-emissions files. **Smkmerge** creates the following output file:
+## 10.6。 ** Smkmerge **
 
+** Smkmerge **程序负责创建可用于模型的排放文件。 ** Smkmerge **创建以下输出文件：
 
--   Model-ready emissions file: [Section 10.6.1,
-    "`[A|B|M|P|E]G[T][S][3D][_S][_L]`"](ch10s06.html#sect_output_egts "10.6.1. [A|B|M|P|E]G[T][S][3D][_S][_L]")
 
-### 10.6.1. `[A|B|M|P|E]G[T][S][3D][_S][_L]`
+-可用于模型的排放文件：[第10.6.1节，“`[[A | B | M | P | E] G [T] [S] [3D] [_ S] [_ L]`”“]]（ch10s06.html＃ sect_output_egts“ 10.6.1。[A | B | M | P | E] G [T] [S] [3D] [_ S] [_ L]”）
 
+### 10.6.1。 `[A | B | M | P | E] G [T] [S] [3D] [_ S] [_ L]`
 
 
-Type: I/O API NetCDF - adapted gridded format
 
-**Table 10.1. I/O API Header for
-`[A|B|M|P|E]G[T][S][3D][_S][_L]`**
+类型：I / O API NetCDF-调整后的网格格式
 
-  I/O API Header variable   Meaning                         Set by\...
-  ------------------------- ------------------------------- ---------------------------------------------------------------
-  NCOLS3D                   Number of columns in the grid   Output grid description in `GRIDDESC`
-  NROWS3D                   Number of rows in the grid      Output grid description in `GRIDDESC`
-  NVARS3D                   Number of output species        Chemical mechanism and speciation profiles in `GSPRO`
+**表10.1。的I / O API标头
+`[A | B | M | P | E] G [T] [S] [3D] [_ S] [_ L]`**
 
+  I / O API标头变量含义由...设置
+  ------------------------- ------------------------- ------ -------------------------------------------- -------------------
+  NCOLS3D网格中的列数GRIDDESC中的输出网格描述。
+  NROWS3D网格中的行数GRIDDESC中的输出网格描述
+  NVARS3D输出种类的数量GSPRO中的化学机理和形态分析
 
-**Table 10.2. Variables in `[A|B|M|P|E]G[T][S][3D][_S][_L]`**
 
-  Variable Name             Type   Units                  Description
-  ------------------------- ------ ---------------------- -------------------------------
-  Name of species 1         Real   \[moles\|tons\]/time   Emissions for species 1
-  \...                      \...   \...                   \...
-  Name of species NVARS3D   Real   \[moles\|tons\]/time   Emissions for species NVARS3D
+**表10.2 `[A | B | M | P | E] G [T] [S] [3D] [_ S] [_ L]`**中的变量
 
+  变量名称类型单位描述
+  ------------------------- ------ ------------------- ---------------------------------
+  种类名称1种类1的真实\ [摩尔\ |吨\] /时间排放
+  \ ... \ ... \ ... \ ...
+  物种名称NVARS3D实际\ [moles ||吨\] /时间物种排放NVARS3D
 
-## 10.7. **Tmpbeis3**
 
+## 10.7。 ** Tmpbeis3 **
 
-The **Tmpbeis3** program is responsible for creating gridded, hourly
-biogenic emissions. **Tmpbeis3** creates the following output file:
 
+** Tmpbeis3 **程序负责创建每小时的网格化生物排放。 ** Tmpbeis3 **创建以下输出文件：
 
--   Model-ready biogenic emissions: [Section 10.7.1, "`B3GTS_L`
-    and
-    `B3GTS_S`"](ch10s07.html#sect_output_b3gts "10.7.1. B3GTS_L and B3GTS_S")
 
+-可用于模型的生物排放：[第10.7.1节，“ B3GTS_L”
+    和
+    `B3GTS_S`“]]（ch10s07.html＃sect_output_b3gts” 10.7.1.B3GTS_L和B3GTS_S“）
 
-### 10.7.1. `B3GTS_L` and `B3GTS_S` 
 
-Type: I/O API NetCDF - adapted gridded format
+### 10.7.1。 B3GTS_L和B3GTS_S
 
+类型：I / O API NetCDF-调整后的网格格式
 
-**Table 10.3. I/O API Header for `B3GTS_L` and
-`B3GTS_S`**
 
-  I/O API Header variable   Meaning                         Set by\...
-  ------------------------- ------------------------------- ---------------------------------------------------------------
-  NCOLS3D                   Number of columns in the grid   Output grid description in `GRIDDESC`
-  NROWS3D                   Number of rows in the grid      Output grid description in `GRIDDESC`
-  NVARS3D                   Number of output species        Chemical mechanism and speciation profiles in `GSPRO`
+**表10.3 B3GTS_L和
+`B3GTS_S` **
 
+  I / O API标头变量含义由...设置
+  ------------------------- ------------------------- ------ -------------------------------------------- -------------------
+  NCOLS3D网格中的列数GRIDDESC中的输出网格描述。
+  NROWS3D网格中的行数GRIDDESC中的输出网格描述
+  NVARS3D输出种类的数量GSPRO中的化学机理和形态分析
 
-**Table 10.4. Variables in `B3GTS_L` and `B3GTS_S`**
 
-  Variable Name             Type   Units                Description
-  ------------------------- ------ -------------------- -------------------------------
-  Name of species 1         Real   \[moles\|tons\]/hr   Emissions for species 1
-  \...                      \...   \...                 \...
-  Name of species NVARS3D   Real   \[moles\|tons\]/hr   Emissions for species NVARS3D
+**表10.4。 B3GTS_L和B3GTS_S中的变量**
 
-## 10.8. **Tmpbio**
+  变量名称类型单位描述
+  ------------------------- ------ ------------------- --------------------------------
+  种类名称1种类1的实际\ [moles ||吨\] / hr排放量
+  \ ... \ ... \ ... \ ...
+  物种名称NVARS3D实际\ [moles ||吨\] / hr物种排放量NVARS3D
 
-The **Tmpbio** program is responsible for creating gridded, hourly
-biogenic emissions. **Tmpbio** creates the following output file:
+## 10.8。** Tmpbio **
 
+** Tmpbio **程序负责产生每小时的网格化生物排放量。 ** Tmpbio **创建以下输出文件：
 
--   Model-ready biogenic emissions: [Section 10.8.1, "`BGTS_L`
-    and
-    `BGTS_S`"](ch10s08.html#sect_output_bgts "10.8.1. BGTS_L and BGTS_S")
 
+-可用于模型的生物排放：[第10.8.1节，“ BGTS_L”和“ BGTS_S””（ch10s08.html＃sect_output_bgts“ 10.8.1.BGTS_L和BGTS_S”））
 
 
-###  10.8.1. `BGTS_L` and `BGTS_S`
 
-Type: I/O API NetCDF - adapted gridded format
+### 10.8.1。 BGTS_L和BGTS_S
 
-The `BGTS_L` and `BGTS_S` files have the same format as
-the `B3GTS_L` and `B3GTS_S` files, respectively. See
-[Section 10.7.1, "`B3GTS_L` and
-`B3GTS_S`"](ch10s07.html#sect_output_b3gts "10.7.1. B3GTS_L and B3GTS_S")
-for format information.
+类型：I / O API NetCDF-调整后的网格格式
 
+BGTS_L和BGTS_S文件分别具有与B3GTS_L和B3GTS_S文件相同的格式。 有关格式信息，请参见[10.7.1节，“ B3GTS_L”和“ B3GTS_S””（ch10s07.html＃sect_output_b3gts“ 10.7.1.B3GTS_L和B3GTS_S”）。
 
 ------------------------------------------------------------------------
 
